--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.0",
+    "angular-animate": "~1.2.0-rc.2",
+    "angular-bootstrap": "~0.11.2",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-loading-bar": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
